configured for local machine and new post form working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
     </div>
 </main>
 <!-- Shows two buttons, one for login and one for signup. -->
-    
+   
+   <div class="row justify-content-around mt-5">
+    <img src="/Images/indexPage.jpg" alt=""> 
+    <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et, ad vel magnam hic corrupti porro dolor excepturi laboriosam quisquam delectus, natus ipsum, odio consequatur maiores dolores animi inventore reiciendis nam.</section>
+</div>
 
 <%- include('partials/footer') -%>
