--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,6 +19,14 @@
                   <input type="text" class="form-control" id="title" name="title">
               </div>
               <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" class="form-control" id="location" name="location">
+            </div>
+            <div class="mb-3">
+              <label for="trailName" class="form-label">Trail Name</label>
+              <input type="text" class="form-control" id="trailName" name="trailName">
+            </div>
+              <div class="mb-3">
                 <label for="caption" class="form-label">Caption</label>
                 <textarea class="form-control" id="caption" name="caption"></textarea>
               </div>
@@ -28,7 +36,7 @@
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
             </form>
-            <!-- Form to upload title, caption and image alongside a button to submit the post. -->
+            <!-- Form to upload title, location, trail name, caption and image alongside a button to submit the post. -->
           </div>
       </div>
       <div class="col-6">
