--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,12 +5,28 @@
     <div class="row justify-content-center mt-5">
       <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
+          <li><%= posts[i].title %></li>
+          <li><%= users[i].userName %></li>
           <!-- For loop iterating through the posts array and spitting out each image and anchor tag on the feeds page. -->
           <li class="col-6 justify-content-between mt-5">
             <a href="/post/<%= posts[i]._id%>">
               <img class="img-fluid" src="<%= posts[i].image%>">
             </a>
           </li>
+          <h5>Location:</h5>
+          <li><%= posts[i].location %></li>
+          <h5>Trail Name:</h5>
+          <li><%= posts[i].trailName %></li>
+          <li><%= posts[i].likes %></li>
+          <img class="img-fluid" src="<%= posts.image%>" />
+        <div class="row justify-content-between">
+        <form
+          class="col-1"
+          action="/feed/likePost/<%= posts.id %>?_method=PUT"
+          method="POST"
+        >
+          <button class="btn btn-primary fa fa-heart" type="submit"></button>
+        </form>
         <% } %>
         </ul>
     </div>
