--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,6 +3,7 @@
   <div class="row justify-content-center mt-5">
     <div class="col-6">
       <h2><%= post.title %></h2>
+      <h2><%= user.userName %></h2>
       <img class="img-fluid" src="<%= post.image%>" />
       <div class="row justify-content-between">
         <form
@@ -10,6 +11,10 @@
           action="/post/likePost/<%= post.id %>?_method=PUT"
           method="POST"
         >
+        <h4>Location:</h4>
+        <h4><%= post.location %></h4>
+        <h4>Trail Name:</h4>
+        <h4><%= post.trailName %></h4>
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
         </form>
         <h3 class="col-3">Likes: <%= post.likes %></h3>
