--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.profile--header-container {
+    width: 100%;
+    height: 20rem;
+    object-position: top;
+    background: url('/Images/funes-4984899.jpg') 6% 15% no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    padding-top: 2rem;
+        /* background: var(--light-gray); */
+    }
+
+.absolute{
+    margin-top: -150px;
+    margin-left: 150px;
+}
+
