--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,12 +27,38 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="container">
+    <div class="navbar bg-base-100 bg-slate-900">
+      <div class="flex-1">
+        <a class="btn btn-ghost normal-case text-xl text-white">Trailblazers</a>
+      </div>
+      <div class="flex-none gap-2">
+        <div class="form-control">
+          <input type="text" placeholder="Search" class="input input-bordered" />
+        </div>
+        <div class="dropdown dropdown-end">
+          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 rounded-full">
+              <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+            </div>
+          </label>
+          <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+            <li>
+              <a class="justify-between">
+                Profile
+              </a>
+            </li>
+            <li><a>Home</a></li>
+            <li><a>Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- <header class="container">
       <div class="text-center">
         <h1 class=""><a href="/profile">Trailblazers</a></h1>
-        <!-- <span>The #100Devs Social Network</span> -->
+        <span>The #100Devs Social Network</span>
       </div>
 
-    </header>
+    </header> -->
   </body>
 </html>
