--- a/views/profileGrid.ejs
+++ b/views/profileGrid.ejs
@@ -2,7 +2,7 @@
 <!-- header image -->
 <div class="profile--header-container"></div>
 
-<main class="grid grid-cols-9 bg-slate-300">
+<main class="grid grid-cols-9 bg-slate-200">
   <div class="border border-2 col-start-2" >
     <div class="w-full h-28 bg-slate-300 static">
       <div class="avatar">
@@ -19,41 +19,46 @@
     </div>
 
     <div class="border border-2 col-start-7">
-      <div class="stats shadow">
+        <h5>Posts</h5>
+    </div>
+
+    <div class="border border-2 col-start-8">
+        <h5>Likes</h5>
+    </div>
+  </main>
   
-        <div class="stat">
-          <div class="stat-figure text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+  <section class="grid grid-cols-9">
+    <section class="border border-2 col-start-2 col-span-2 my-4" >
+      <div class="border border-4 h-52 bg-slate-200">
+        <p>thid id my bio</p>
+      </div>
+    </section>
+    
+    <section class="border border-2 col-start-4 col-span-6 grid grid-cols-2" >
+      <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
+        <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+        <div class="card-body">
+          <h2 class="card-title">Shoes!</h2>
+          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Buy Now</button>
           </div>
-          <div class="stat-title">Total Likes</div>
-          <div class="stat-value text-primary">25.6K</div>
         </div>
       </div>
-  </div>
-
-
-  <div class="border border-2 col-start-8">
-    <div class="stats shadow">
-    <div class="stat">
-      <div class="stat-figure text-secondary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+      <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
+        <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+        <div class="card-body">
+          <h2 class="card-title">Shoes!</h2>
+          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Buy Now</button>
+          </div>
+        </div>
       </div>
-      <div class="stat-title">Page Views</div>
-      <div class="stat-value text-secondary">2.6M</div>
-    </div>
-  </div>
-  </div>
-</div>
-
+    </section>
+      
+    </section>
     
-  <!-- <div class="border border-2" >02</div>
-  <div class="border border-2" >03</div>
-  <div class="border border-2" >04</div>
-  <div class="border border-2" >05</div>
-  <div class="border border-2" >06</div>
-  <div class="border border-2" >07</div>
-  <div class="border border-2" >08</div>
-  <div class="border border-2" >09</div> -->
 </main>
 
 <%- include('partials/footer') -%>
