--- a/views/profileGrid.ejs
+++ b/views/profileGrid.ejs
@@ -35,16 +35,20 @@
     </section>
     
     <section class="border border-2 col-start-4 col-span-6 grid grid-cols-2" >
+      <% for(var i=0; i<posts.length; i++) {%>
       <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
-        <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+        <figure><img src="<%= posts[i].image%>" alt="Shoes" /></figure>
         <div class="card-body">
-          <h2 class="card-title">Shoes!</h2>
-          <p>If a dog chews shoes whose shoes does he choose?</p>
+          <h2 class="card-title"><%= posts[i].title%></h2>
+          <h5>Location: <%= posts[i].location%></h5>
+          <h5>Trail Name: <%= posts[i].trailName%></h5>
+          <p><%= posts[i].caption%></p>
           <div class="card-actions justify-end">
-            <button class="btn btn-primary">Buy Now</button>
+            <button class="btn btn-primary">Like</button>
           </div>
         </div>
       </div>
+      <% } %>
       <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
         <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
         <div class="card-body">
