--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,7 @@
-<footer class="footer bg-slate-300">
+<footer class="footer footer-center bg-slate-900 p-4 text-base-content">
+    <div>
+        <p class="text-white" >Copyright © 2023 - All rights reserved by Andy Learmouth</p>
+    </div>
 </footer>
 </body>
 </html>
