--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header') -%>
 <div class="signup-container"></div>
-<main class="bg-slate-300">
+<main class="">
     <section class="">
-        <div class=" ">
+        <div class="">
             <section class="col-6 mt-5">
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
@@ -39,8 +39,9 @@
                       <label for="confirmPassword" class="form-label">Confirm Password</label>
                       <input type="password" class="form-control" class="input input-bordered w-full max-w-xs" id="confirmPassword" name="confirmPassword" />
                     </div>
-                  </div>
                     <button type="submit" class="btn btn-primary col-start-4">Submit</button>
+                  </div>
+                   
                   </form>
             </section>
         </div>
