--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,16 @@
             /* background: var(--light-gray); */
         }
 
+        .menu-container {
+            width: 100%;
+            height: 39rem;
+            object-position: top;
+            background: url('/Images/alberta-2297204.jpg') no-repeat;
+            background-size: cover;
+            object-fit: cover;
+                /* background: var(--light-gray); */
+            }
+
 .absolute{
     margin-top: -150px;
 }
