--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
   <div class="">
     <section class="col-6 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-      <div class="alert alert-danger"><%= el.msg %></div>
+      <div class="alert alert-danger bg-slate-200"><%= el.msg %></div>
       <!-- If there are flash errors, display them to the user. -->
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
       messages.info.forEach( el => { %>
@@ -29,7 +29,7 @@
             name="password"
           />
         </div>
-        <button type="submit" class="btn btn-primary col-start-4">Submit</button>
+        <button type="submit" class="btn btn-primary col-start-4 mt-5">Submit</button>
       </div>
       
 
