--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,33 +26,32 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body class="bg-slate-300">
-    <div class="navbar bg-base-100 bg-slate-900">
+  <body class="bg-slate-200">
+    
+    <div class="navbar bg-base-100 bg-slate-900 text-white">
       <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl text-white">Trailblazers</a>
+        <a class="btn btn-ghost normal-case text-xl text-4xl">Trailblazers</a>
       </div>
-      <div class="flex-none gap-2">
+      <div class="flex-none">
+        <ul class="menu menu-horizontal px-1">
+          <li><a href="/profile" >Profile</a></li>
+          <li><a href="/feed">Feed</a></li>
+          <li><a href="" >Post</a></li>
+        </ul>
         <div class="form-control">
           <input type="text" placeholder="Search" class="input input-bordered" />
         </div>
-        <div class="dropdown dropdown-end">
-          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-            <div class="w-10 rounded-full">
-              <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-            </div>
-          </label>
-          <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-            <li>
-              <a class="justify-between">
-                Profile
-              </a>
-            </li>
-            <li><a>Home</a></li>
-            <li><a>Logout</a></li>
-          </ul>
-        </div>
+        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <img src="/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+          </div>
+        </label>
+        <ul>
+          <li class="col-3 bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded"><a href="/logout">Sign Out</a></li>
+        </ul>
       </div>
     </div>
+
     <!-- <header class="container">
       <div class="text-center">
         <h1 class=""><a href="/profile">Trailblazers</a></h1>
