--- a/views/profileGrid.ejs
+++ b/views/profileGrid.ejs
@@ -2,15 +2,15 @@
 <!-- header image -->
 <div class="profile--header-container"></div>
 
-<main class="grid grid-cols-9 bg-slate-200">
-  <div class="border border-2 col-start-2" >
-    <div class="w-full h-28 bg-slate-300 static">
+<main class="grid grid-cols-9 bg-slate-300">
+  <div class="col-start-2" >
+    <div class="w-full h-28 bg-slate-300">
       <div class="avatar">
         <div class="w-40 rounded absolute">
           <img class="border-2" src="/Images/dog-983014_1920.jpg" />
-          <button class="container btn btn-outline mt-4">Button</button>
         </div>
       </div>
+      <button class="container btn btn-outline mt-4">Edit Profile</button>
     </div>
   </div>
 
@@ -29,8 +29,8 @@
   
   <section class="grid grid-cols-9">
     <section class="border border-2 col-start-2 col-span-2 my-4" >
-      <div class="border border-4 h-52 bg-slate-200">
-        <p>thid id my bio</p>
+      <div class="border border-4 h-52 bg-slate-300">
+        <p class="font-extrabold">About:</p>
       </div>
     </section>
     
