--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class ="bg-slate-200">
+<!--<main class ="bg-slate-200">
     <section class="menu-container">
         <div class="flex justify-center grid grid-cols-3">
             <h1 class="text-7xl text-white col-start-2 ">Trailblazers</h1>
@@ -13,7 +13,20 @@
     <a href="/login" class="btn btn-active col-start-3"> Login</a>
     <a href="/signup" class="btn btn-active col-start-7"> Signup</a>
 </div>
-</main>
+</main>-->
+<section class="h-5/6">
+<div class="hero min-h-screen" style="background-image: url('/Images/alberta-2297204.jpg');">
+    <div class="hero-overlay bg-opacity-20"></div>
+    <div class="hero-content text-center text-neutral-content">
+      <div class="max-w-md">
+        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+        <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+        <a href="/login"><button class="btn mx-10 btn-grey">Login</button></a>
+        <a href="/signup"><button class="btn mx-10 btn-grey">Sign up</button></a>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Shows two buttons, one for login and one for signup. -->
    
    
