--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,47 @@
 <%- include('partials/header') -%>
+<div class="hero min-h-screen" style="background-image: url(/Images/funes-4984899.jpg);">
+  <div class="hero-overlay bg-opacity-20"></div>
+  <div class="hero-content text-center text-neutral-content">
+    <div class="max-w-md">
+      
+      <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-slate-300">
+        <div class="card-body">
+          <div class="form-control">
+            <h2 class="text-black text-2xl">Log in now</h2>
+            <label class="label">
+              <span class="label-text">Email</span>
+            </label>
+            <input type="text" placeholder="email" class="input input-bordered" />
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Password</span>
+            </label>
+            <input type="text" placeholder="password" class="input input-bordered" />
+          </div>
+          <div class="form-control mt-3">
+            <button class="btn btn-grey">Login</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+<%- include('partials/footer') -%>
+
+
+<!-- 
+
 <div class="signup-container"></div>
 <main class="">
   <div class="">
     <section class="col-6 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger bg-slate-200"><%= el.msg %></div>
-      <!-- If there are flash errors, display them to the user. -->
+      
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
       messages.info.forEach( el => { %>
       <div class="alert alert-info"><%= el.msg %></div>
@@ -37,7 +73,4 @@
     </form>
     </section>
   </div>
-</main>
- <!-- Login form using email and password alongside a submit button. -->
-
-<%- include('partials/footer') -%>
+</main> -->
