--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,13 +28,13 @@
   </head>
   <body class="bg-slate-200">
     
-    <div class="navbar bg-base-100 bg-slate-900 text-white">
+    <div class="navbar bg-slate-900 text-white">
       <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl text-4xl">Trailblazers</a>
+        <a href="/" class="btn btn-ghost normal-case text-xl text-4xl">Trailblazers</a>
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-          <li><a href="/profile" >Profile</a></li>
+          <li><a href="/profile">Profile</a></li>
           <li><a href="/feed">Feed</a></li>
           <li><a href="" >Post</a></li>
         </ul>
@@ -47,7 +47,7 @@
           </div>
         </label>
         <ul>
-          <li class="col-3 bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded"><a href="/logout">Sign Out</a></li>
+          <li class="col-3 bg-transparent hover:bg-slate-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded"><a href="/logout">Sign Out</a></li>
         </ul>
       </div>
     </div>
