--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,23 +5,36 @@
     <div class="max-w-md">
       
       <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-slate-300">
+        <form action="/login" method="POST">
         <div class="card-body">
           <div class="form-control">
             <h2 class="text-black text-2xl">Log in now</h2>
             <label class="label">
               <span class="label-text">Email</span>
             </label>
-            <input type="text" placeholder="email" class="input input-bordered" />
+            <input type="email" placeholder="email" class="input input-bordered text-black" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" />
           </div>
+
           <div class="form-control">
             <label class="label">
               <span class="label-text">Password</span>
             </label>
-            <input type="text" placeholder="password" class="input input-bordered" />
+            <input type="password" placeholder="password" class="input input-bordered text-black" id="exampleInputPassword1" name="password"/>
           </div>
+
           <div class="form-control mt-3">
-            <button class="btn btn-grey">Login</button>
+            <button type="submit" class="btn btn-grey">Login</button>
           </div>
+          <section class="">
+            <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+            <div class="alert alert-danger bg-slate-300 text-red-600"><%= el.msg %></div>
+            
+            <% }) %> <% } %> <% if (locals.messages.info) { %> <%
+            messages.info.forEach( el => { %>
+            <div class="alert alert-info"><%= el.msg %></div>
+            <% }) %> <% } %>
+            </section>      
+        </form>
         </div>
       </div>
 
@@ -32,45 +45,3 @@
 
 <%- include('partials/footer') -%>
 
-
-<!-- 
-
-<div class="signup-container"></div>
-<main class="">
-  <div class="">
-    <section class="col-6 mt-5">
-      <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-      <div class="alert alert-danger bg-slate-200"><%= el.msg %></div>
-      
-      <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-      messages.info.forEach( el => { %>
-      <div class="alert alert-info"><%= el.msg %></div>
-      <% }) %> <% } %>
-
-    <form class="grid grid-cols-5" action="/login" method="POST">
-      <div class="col-start-2">
-        <div class="mb-3 form-control w-full max-w-xs file-input-lg">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="input input-bordered w-full max-w-xs file-input-lg form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" />
-        </div>
-      </div>
-
-      <div class="col-start-4">
-        <div class="mb-3 form-control w-full max-w-xs file-input-lg">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="input input-bordered w-full max-w-xs form-control file-input-lg"
-            id="exampleInputPassword1"
-            name="password"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary col-start-4 mt-5">Submit</button>
-      </div>
-      
-
-     
-    </form>
-    </section>
-  </div>
-</main> -->
