--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,7 +47,7 @@
           </div>
         </label>
         <ul>
-          <li class="col-3 bg-transparent hover:bg-slate-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded"><a href="/logout">Sign Out</a></li>
+          <a href="/logout"><li class="col-3 bg-transparent hover:bg-slate-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded">Sign Out</li></a>
         </ul>
       </div>
     </div>
