--- a/views/profileGrid.ejs
+++ b/views/profileGrid.ejs
@@ -15,11 +15,12 @@
   </div>
 
     <div class="border border-2 col-start-3">
-        <h2>User Name</h2>
+        <h2> <%= user.userName %></h2>
     </div>
 
     <div class="border border-2 col-start-7">
-        <h5>Posts</h5>
+        <h5>Posts:</h5>
+        <h5><%= posts.length%></h5>
     </div>
 
     <div class="border border-2 col-start-8">
@@ -34,7 +35,12 @@
       </div>
     </section>
     
-    <section class="border border-2 col-start-4 col-span-6 grid grid-cols-2" >
+
+    <section class="border border-2 col-start-4 col-span-6 grid grid-cols-2 gap-4 border-black mx-4 mt-4" >
+      <div class="col-start-1 col-span-2 grid grid-cols-9 py-2">
+        <h2 class="col-start-1 text-2xl">Posts:</h2>
+        <button class="btn btn-grey col-start-9 mx-4">Add post</button>
+      </div>
       <% for(var i=0; i<posts.length; i++) {%>
       <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
         <figure class="h-60"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
@@ -66,7 +72,6 @@
         </div>
       </div>
       <% } %>
-      
     </section>
       
     </section>
