--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -37,7 +37,7 @@
         </div>
 
         <div>
-          <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="profileImage" name="profileImage" />
+          <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="imageUpload" name="file" />
         </div>
 
         <div class="form-control mt-6">
@@ -53,34 +53,7 @@
 
 
 
-            <h2>Add a post</h2>
-            <!-- Add a post heading -->
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-              <div class="mb-3">
-                  <label for="title" class="form-label">Title</label>
-                  <input type="text" class="form-control" id="title" name="title">
-              </div>
-              <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input type="text" class="form-control" id="location" name="location">
-            </div>
-            <div class="mb-3">
-              <label for="trailName" class="form-label">Trail Name</label>
-              <input type="text" class="form-control" id="trailName" name="trailName">
-            </div>
-              <div class="mb-3">
-                <label for="caption" class="form-label">Caption</label>
-                <textarea class="form-control" id="caption" name="caption"></textarea>
-              </div>
-              <div class="mb-3">
-                <label for="imgUpload" class="form-label">Image</label>
-                <input type="file" class="form-control" id="imageUpload" name="file">
-              </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-            </form>
-            <!-- Form to upload title, location, trail name, caption and image alongside a button to submit the post. -->
-          </div>
-      </div>
+        
       <div class="col-6">
         <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
