--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,18 +25,19 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/55dffb2fda.js" crossorigin="anonymous"></script>
   </head>
   <body class="bg-slate-200">
     
     <div class="navbar bg-slate-900 text-white">
       <div class="flex-1">
-        <a href="/" class="btn btn-ghost normal-case text-xl text-4xl">Trailblazers</a>
+        <a href="/" class="btn btn-ghost normal-case text-4xl">Trailblazers</a>
       </div>
       <div class="flex-none">
-        <ul class="menu menu-horizontal px-1">
+        <ul class="menu menu-horizontal px-1 text-xl">
           <li><a href="/profile">Profile</a></li>
           <li><a href="/feed">Feed</a></li>
-          <li><a href="" >Post</a></li>
+          <li><a href="/post" >Post</a></li>
         </ul>
         <div class="form-control">
           <input type="text" placeholder="Search" class="input input-bordered" />
