--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -6,7 +6,6 @@
       <div class="card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
           <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-            
 
           <div class="form-control">
             <h2 class="text-black text-2xl">Create a Post</h2>
@@ -41,9 +40,9 @@
             <label class="label">
               <span class="label-text">Image</span>
             </label>
-            <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="imageUpload" name="file" />
+            <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full text-black" id="imageUpload" name="file" />
           </div>
-
+          
           <div class="form-control mt-3">
             <button class="btn btn-grey">Post</button>
           </div>
