--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,98 +1,104 @@
 <%- include('partials/header') -%>
 <!-- header image -->
 <div class="profile--header-container"></div>
-<!-- profile info banner -->
-<div class="w-full h-28 bg-slate-300 static">
-  <div class="avatar">
-    <div class="w-40 rounded absolute">
-      <img class="border-2" src="/Images/dog-983014_1920.jpg" />
-      <button class="container btn btn-outline mt-4">Button</button>
-    </div>
-    
-  </div>
-  <!-- Next steps to change to grid layout for this container -->
-  <div class="stats shadow">
-  
-    <div class="stat">
-      <div class="stat-figure text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
-      </div>
-      <div class="stat-title">Total Likes</div>
-      <div class="stat-value text-primary">25.6K</div>
-    </div>
-    
-    <div class="stat">
-      <div class="stat-figure text-secondary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-      </div>
-      <div class="stat-title">Page Views</div>
-      <div class="stat-value text-secondary">2.6M</div>
-    </div>
-  
-  </div>
-</div>
 
-<!-- Data bar -->
-
-<div class="container">
-  <div class="row mt-5">
-      <div class="col-6">
-          <div>
-              <p><strong>User Name</strong>: <%= user.userName %></p>
-              <!-- Shows user's username from the user collection. Pulls it with every request and displays in the DOM. -->
-              <p><strong>Email</strong>: <%= user.email %></p>
-              <!-- Shows user's email address from the user collection. Pulls it with every request and displays in the DOM. -->
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
-              <!-- Button to log out -->
+<main class="grid grid-cols-7 bg-slate-300">
+  <div class="col-start-2" >
+    <div class="w-full h-28 bg-slate-300">
+      <div class="avatar">
+        <div class="w-52 absolute">
+          <img class="border-2" src="<%= user.profilePhoto%>"/>
+          <div class="flex justify-center">
+            <a href="/editProfile"><button class="btn btn-outline mt-4 normal-case text-lg">Edit Profile</button></a>
           </div>
-          <div class="mt-5">
-            <h2>Add a post</h2>
-            <!-- Add a post heading -->
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-              <div class="mb-3">
-                  <label for="title" class="form-label">Title</label>
-                  <input type="text" class="form-control" id="title" name="title">
-              </div>
-              <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input type="text" class="form-control" id="location" name="location">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="border border-2 col-start-3 flex">
+        <h2 class='self-center mx-auto text-2xl font-bold'> <%= user.userName %></h2>
+    </div>
+
+    <div class="col-start-7 flex flex-col my-auto">
+        <h5 class='self-center text-2xl font-bold'><%= posts.length%></h5>
+        <h5 class='self-center text-lg'>Posts</h5>
+    </div>
+
+    
+  </main>
+  
+  <section class="grid grid-cols-9">
+    <section class="border border-2 col-start-2 col-span-2 my-4" >
+      <div class="border border-4 h-52 bg-slate-300">
+        <h3 class="font-extrabold">About:</h3>
+        <p> <%= user.bio%></p>
+        <br>
+        <p><%= user.location%></p>
+        <p><i class="fa-solid fa-house"></i></p>
+      </div>
+    </section>
+    
+
+    <section class="border border-x border-y border-slate-300 col-start-4 col-span-6 grid grid-cols-2 gap-4 border-black mx-4 mt-4" >
+      <div class="col-start-1 col-span-2 grid grid-cols-9 py-2">
+        <h2 class="col-start-1 text-2xl">Posts:</h2>
+        <a class="col-start-8 col-span-2 flex justify-center" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-3/5">Add Post</button></a>
+      </div>
+      <% for(var i=0; i<posts.length; i++) {%>
+      <div class="card card-compact w-96 bg-base-100 shadow-xl mx-auto">
+        <figure class="h-60"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
+        <div class="card-body">
+          <h2 class="card-title"><%= posts[i].title%></h2>
+          <h5>Location: <%= posts[i].location%></h5>
+          <h5>Trail Name: <%= posts[i].trailName%></h5>
+          <p><%= posts[i].caption%></p>
+        <section class="grid grid-cols-6">
+          <div col-start-1 col-span-3>
+            <div class="rating rating-mdlg mt-2">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             </div>
-            <div class="mb-3">
-              <label for="trailName" class="form-label">Trail Name</label>
-              <input type="text" class="form-control" id="trailName" name="trailName">
-            </div>
-              <div class="mb-3">
-                <label for="caption" class="form-label">Caption</label>
-                <textarea class="form-control" id="caption" name="caption"></textarea>
-              </div>
-              <div class="mb-3">
-                <label for="imgUpload" class="form-label">Image</label>
-                <input type="file" class="form-control" id="imageUpload" name="file">
-              </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+          </div>
+          <div class="card-actions justify-end col-start-4">
+            <form
+            class="col-1"
+            action="/profile/likePost/<%= posts[i].id %>?_method=PUT"
+            method="POST"
+          >
+            <button class="btn fa fa-heart bg-slate-900" type="submit"></button>
+            <h3>Likes: <%= posts[i].likes %></h3>
+          </form>
+        </div>
+        <div class ="flex justify-end col-start-5">
+          <button class="btn fa fa-comment bg-slate-900" type="submit"></button>
+        </div>
+        <div class="flex justify-end col-start-6">
+          <%if(posts.user != user.id){ %>
+            <form
+              action="/profile/deletePost/<%= posts[i].id %>?_method=DELETE"
+              method="POST"
+              class="col-3"
+            >
+              <button class="btn fa fa-trash bg-slate-900" type="submit"></button>
             </form>
-            <!-- Form to upload title, location, trail name, caption and image alongside a button to submit the post. -->
+        </div>
+      </section>
+            <%}%>
           </div>
+        </div>
       </div>
-      <div class="col-6">
-        <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <!-- Loops through all the users posts and put them in LIs and anchor tags the image. -->
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <!-- Building LIs using ID -->
-              <img class="img-fluid" src="<%= posts[i].image%>">
-              <!-- Plugging in to build the profile -->
-            </a>
-          </li>
-        <% } %>
-        </ul>
-        <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
-          <!-- Button to return to the feed. -->
-        </div>  
-      </div>  
-    </div>
-  </div>
+      <% } %>
+    </section>
+      
+    </section>
 </div>
+
+</main>
+
 <%- include('partials/footer') -%>
+
