Updated the trash can functionality and added padding to the bio

--- a/public/style.css
+++ b/public/style.css
@@ -3827,8 +3827,17 @@ html {
   height: 15rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-min {
+  min-height: -moz-min-content;
+  min-height: min-content;
 }
 
 .w-full {
@@ -4061,6 +4070,10 @@ html {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .py-2 {
