--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-    <div class="border border-2 col-start-3 flex">
+    <div class="col-start-3 flex">
         <h2 class='self-center mx-auto text-2xl font-bold'> <%= user.userName %></h2>
     </div>
 
