--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') -%>
 <div class="grid grid-cols-9 pt-5">
-  <section class="col-start-2 col-span-5 bg-slate-300 px-8 py-4 ">
+  <div class="col-start-2 col-span-5 border-r border-slate-900 pr-6 mb-5">
+  <section class=" bg-slate-300 px-8 py-4 ">
   <div class="row justify-content-center">
     <div class="grid grid-cols-6">
       <h2 class="card-title col-start-1 col-span-4"><%= post.title %></h2>
@@ -11,8 +12,8 @@
     </div>
     <div class="grid grid-cols-6 flex">
       <p class="col-start-1 col-span-4"> <%= post.caption %></p>
-      <div class="col-start-5 justify-self-end"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
-      <div class="col-start-6 justify-self-end"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
+      <div class="col-start-5 justify-self-end pr-2"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
+      <div class="col-start-6 justify-self-end pb-2"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
       <div class="col-start-6 flex justify-between "><form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -36,25 +37,25 @@
     
 </div>  
 </section>
-  <div class="col-start7 col-span-3 col-3 mt-5">
+</div>
+  <div class="col-start-7 col-span-3 col-3 mt-5 p-6">
       <% for(var i=0; i<comment.length; i++) {%>
         <div class="chat chat-start">
           <div class="chat-image avatar">
-            <div class="w-10 rounded-full">
-              <img src="<%= comment[i].user.profilePhoto%>" /> Edit here
+            <a href="/profile"><div class="w-10 rounded-full">
+              <img src="<%= comment[i].user.profilePhoto%>" /></a> Edit here
             </div>
           </div>
-          <div class="chat-header">
+          <a href="/profile"><div class="chat-header">
             <%= comment[i].user.userName%>
-            <time class="text-xs opacity-50"><%= comment[i].createdAt%></time>
-          </div>
+          </div></a>
           <div class="chat-bubble"><%= comment[i].comment%></div>
         </div>
       <% } %>
       <form action="/comment/createComment/<%= post.id%>" method="POST">
-        <div class="mb-3">
+        <div class="mb-3 form-control">
             <label for="comment" class="form-label">Comment</label>
-            <input type="text" class="form-control" id="comment" name="comment">
+            <input type="text" class="input input-bordered text-black" id="comment" name="comment">
         </div>
         <div class="form-control mt-3">
           <button class="btn btn-grey">Post</button>
@@ -64,13 +65,5 @@
 </div>  
 </div>
 </div>
-
-<form action="/comment/createComment/<%= post.id%>" method="POST">
-  <div class="mb-3">
-      <label for="comment" class="form-label">Comment</label>
-      <input type="text" class="form-control" id="comment" name="comment">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
 
 <%- include('partials/footer') -%>
