Updated functionality on the editProfile page so the picture matches the current user profile image.

--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -6,7 +6,7 @@
       
     </div>
     <div class="col-start-1 mx-10">
-      <img src="/Images/dog-983014_1920.jpg" class="max-w-sm rounded-lg shadow-2xl border-white border-4" />
+      <img src="<%= user.profilePhoto%>" class="max-w-sm rounded-lg shadow-2xl border-white border-4" />
     </div>
     <div class="col-start-2 justify-center mx-10">
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
